methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:3: error: ambiguous reference to overloaded definition,
both method run in class MethodsReturning of type ()Unit
and  method run in class MethodsReturning of type ()Unit
match argument types ()
  run()
  ^MethodsReturning:4: error: Boolean does not take parameters
  if (vuBiscuit()==false){
               ^MethodsReturning:12: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.MethodsReturning'
def run() {
    ^