methods.returning.MethodsReturning.scala.code
var vuBiscuit : Boolean = false
def haveBaggle():Boolean = {
  run()
  if (vuBiscuit()==false){
    return false
  }
  else {
    return true
  }
}

def run() {
  for( a <- 1 to 6){
    if (estSurBiscuit()==true){
      vuBiscuit=true
    }
  }
  backward(6)
}